Upgrade to JDK 17 with OpenRewrite